src/test/resources/parse/RedundantModifier.casc
pub class RedundantModifier

impl RedundantModifier {
    pub new() {}

    pub fn a1() {}
}